--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^10.1.1"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.7",
