--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7",
     "node-sass": "^6.0.1",
+    "nuxt": "^2.15.7",
     "sass-loader": "^10.1.1"
   },
   "devDependencies": {
